--- a/app/components/ExpertiseSection.module.css
+++ b/app/components/ExpertiseSection.module.css
@@ -73,7 +73,7 @@
 }
 
 .title {
-  font-size: 36px;
+  font-size: var(--font-5xl);
   color: black;
   text-transform: uppercase;
   line-height: 0.94;
@@ -82,42 +82,12 @@
   font-weight: 100;
 }
 
-@media (min-width: 640px) {
-  .title {
-    font-size: 48px;
-  }
-}
-
-@media (min-width: 768px) {
-  .title {
-    font-size: 60px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .title {
-    font-size: 72px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .title {
-    font-size: 80px;
-  }
-}
-
 .description {
-  font-size: 14px;
+  font-size: var(--font-sm);
   color: black;
   line-height: 1.625;
   font-family: var(--font-grifter);
   font-weight: 400;
-}
-
-@media (min-width: 768px) {
-  .description {
-    font-size: 16px;
-  }
 }
 
 .imageContainer {
