--- a/app/components/CoachingSection.module.css
+++ b/app/components/CoachingSection.module.css
@@ -198,7 +198,7 @@
 .infoButtonText {
   position: relative;
   color: var(--color-white);
-  font-size: 3.2em;
+  font-size: var(--font-h4);
   font-family: var(--font-relost);
   font-weight: 400;
   z-index: 2;
